<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Cargo.TruckBoard">

    <include layout="@layout/toolbar" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@drawable/border"
        android:hint="@string/date"
        android:padding="10dp"
        android:textColor="@color/grey"
        android:textSize="@dimen/text_size"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
             >
        <EditText
            android:id="@+id/txtFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/border"
            android:hint="@string/start_point"
            android:inputType="textCapSentences"
            android:padding="10dp"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            >
        <EditText
            android:id="@+id/txtTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
             android:background="@drawable/border"
            android:hint="@string/end_point"
            android:inputType="textCapSentences"
            android:padding="10dp"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_size" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtClear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />
        <TextView
            android:id="@+id/txtSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/search"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtSrNo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/srNo"
            android:textSize="@dimen/text_size"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:background="@color/grey"></LinearLayout>

        <TextView
            android:id="@+id/txtAdate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="@dimen/text_size"
            android:text="@string/availableDate"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:background="@color/grey"></LinearLayout>

        <TextView
            android:id="@+id/txtPFrom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="@dimen/text_size"
            android:text="@string/from"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:background="@color/grey"></LinearLayout>

        <TextView
            android:id="@+id/txtPTo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/to"
            android:textSize="@dimen/text_size"
            android:textColor="@color/white" />

    </LinearLayout>

    <ListView
        android:id="@+id/listTruckBoard"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"></ListView>

</LinearLayout>

